--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">MoviesListAPI</string>
+    <string name="app_name">Top Movies</string>
+    <string name="load_more">Загрузить ещё</string>
 </resources>
