--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Top Movies</string>
     <string name="load_more">Загрузить ещё</string>
+    <string name="title_activity_details">DetailsActivity</string>
 </resources>
